tests/expectations/compiler/structs/empty_struct_fail.out
Error [ETYC0372112]: A struct must have at least one member.
    --> compiler-test:3:1
     |
   3 | struct Bar {
     | ^^^^^^^^^^^^
   4 | }
     | ^
Error [ETYC0372171]: A struct must have at least one member of non-zero size.
    --> compiler-test:6:1
     |
   6 | struct Foo {
     | ^^^^^^^^^^^^
   7 |     a: [u8; 0],
     |     ^^^^^^^^^^^
   8 | }
     | ^
Error [ETYC0372083]: A program must have at least one entry point fn.
    --> compiler-test:1:9
     |
   1 | program test.aleo {}
     |         ^^^^^^^^^
